--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "npm": "^10.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-live-clock": "^6.1.18",
     "sass": "^1.69.5"
   },
   "devDependencies": {
