--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.0.2",
     "g": "^2.0.1",
     "next": "14.0.2",
+    "next-sanity": "^6.0.5",
     "npm": "^10.2.4",
     "react": "^18",
     "react-dom": "^18",
