--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sanity/image-url": "^1.0.2",
+    "aos": "^2.3.4",
     "g": "^2.0.1",
     "next": "14.0.2",
     "next-sanity": "^6.0.5",
